Avoid crash when no monitor implementations exist.

The GVariantBuilder is unable to create any GVariant for
an untyped array - while an empty vector is a valid variant,
it is not valid for an untyped array.

Passing the resulting null to gvfs_dbus_daemon_complete_cancel()
causes gvfs to abort with a g_error().

https://bugzilla.gnome.org/show_bug.cgi?id=756105